--- a/index.html
+++ b/index.html
@@ -5,6 +5,13 @@
     <link rel="icon" type="image/svg+xml" href="./src/assets/images/TitleLogo.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>L A W A T A</title>
+    
+    <!-- Preload critical fonts -->
+    <link rel="preload" href="/src/assets/fonts/SofiaSansExtraCondensed-VariableFont_wght.ttf" as="font" type="font/ttf" crossorigin>
+    <link rel="preload" href="/src/assets/fonts/TitanOne-Regular.ttf" as="font" type="font/ttf" crossorigin>
+    
+    <!-- Load fonts.css -->
+    <link rel="stylesheet" href="/src/assets/fonts/fonts.css">
   </head>
   <body>
     <div id="root"></div>
